Fixed artist page cover arts shifted

--- a/XpoMusic/Stylesheets/LightTheme/general.scss
+++ b/XpoMusic/Stylesheets/LightTheme/general.scss
@@ -25,7 +25,6 @@ div[aria-live=polite], .control-button--active, .Root__nav-bar .sessionInfo .ava
 .UserWidget__link--is-active span, .AdsContainer__inner, img[src*=profilepic],
 img[src*=p200x200], .akh8GUlQiyVVqyYbwYzyr {
     filter: invert(1);
-    transform: translate3d(0, 0, 0);
 }
 
 .tracklist-row--active .position, .tracklist-row--active .tracklist-duration, .tracklist-row--active .tracklist-name, .tracklist-row--active .tracklist-play-pause {
